fixing main css gaps

--- a/main.css
+++ b/main.css
@@ -40,10 +40,9 @@ nav{
     padding-bottom: 15px;
 }
 main{
-    height: 1000px;
+    height: 450px;
     text-align: center;
     font-family: 'Lato', sans-serif;
-    padding-top: 80px;
     padding-left: 40px;
     padding-right: 40px;
 }
